<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="Context menu anchored to a list item" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_context_menu_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/keyline_5"
        app:primaryText="XML PopupMenu, for comparison" />

    <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
        android:id="@+id/xml_context_menu_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leadingIcon="@drawable/ic_globe_24"
        app:primaryText="Bookmark this page"
        app:secondaryText="duckduckgo.com"
        app:trailingIcon="@drawable/ic_menu_vertical_24" />

</LinearLayout>
