...
                        },
                        trailingContent = {
                            DaxContextMenu(
                                anchor = {
                                    Icon(
                                        painter = painterResource(CommonR.drawable.ic_menu_vertical_24),
                                        contentDescription = "More options",
                                        onClick = { firstMenuExpanded = true },
                                    )
                                },
                                expanded = firstMenuExpanded,
                                onDismissRequest = { firstMenuExpanded = false },
                            ) {
...
