...
    <com.duckduckgo.common.ui.view.SearchBarView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:searchHint="Search" />

</androidx.constraintlayout.widget.ConstraintLayout>
