...
        findViewTreeLifecycleOwner()?.lifecycle?.removeObserver(viewModel)
        conflatedStateJob.cancel()
        conflatedCommandJob.cancel()
    }

    private fun render(viewState: ViewState) {
        logcat { "New Tab: render $viewState" }

        onHasContent?.invoke(viewState.hasContent)

        if (viewState.shouldShowLogo) {
            homeBackgroundLogo.showLogo()
        } else {
...
