...

    interface OnVisibilityChangedListener {
        fun onVisibilityChange(v: View?, isVisible: Boolean)
    }

    enum class Orientation {
        Start,
        Center,
        ;

        companion object {
            fun from(orientation: Int): Orientation {
                // same order as attrs-notify-me-view.xml
...
