<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.duckduckgo.common.ui.view.listitem.OneLineListItem xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accessibilitySetting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:primaryText="@string/settingsAccessibility"
    app:leadingIcon="@drawable/ic_accessibility_color_24"
    tools:showIn="@layout/content_settings_new" />