appId: com.duckduckgo.mobile.android
name: "Input Screen user preferences test"
tags:
  - inputScreenTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          stopApp: true
      - runFlow: ../shared/skip_all_onboarding.yaml
      - tapOn:
          id: "omnibarTextInput"

      # verify that the Input Screen is disabled by default
      - assertNotVisible:
          id: "inputModeWidget"

      # enable the Input Screen
      - runFlow: ../shared/open_ai_settings_screen.yaml
      - tapOn:
          id: "duckAiInputScreenToggleWithAiImage"
      - action: back
      - action: back

      # verify that the Input Screen doesn't automatically open when coming back from settings
      - assertNotVisible:
          id: "inputModeWidget"
      - assertVisible:
          id: "omnibarTextInput"
          focused: false

      # verify that the Input Screen opens when tapping on the omnibar
      - tapOn:
          id: "omnibarTextInput"
      - assertVisible:
          id: "inputModeWidget"

      # verify that opening new tab automatically opens the input screen
      - inputText: "eff.org"
      - tapOn:
          id: "actionSend"
      - runFlow: ../shared/browser_screen/click_on_tabs_button.yaml
      - tapOn: "New Tab"
      - assertVisible:
          id: "inputModeWidget"
      - action: back

      # disable global AI setting and verify the Input Screen is disabled
      - action: back
      - runFlow: ../shared/open_ai_settings_screen.yaml
      - tapOn:
          id: "trailingSwitch"
          index: 0
      - action: back
      - action: back
      - assertVisible:
          id: "omnibarTextInput"
          focused: true
      - assertNotVisible:
          id: "inputModeWidget"

      # verify that the Input Screen doesn't open when tapping on the omnibar
      - tapOn:
          id: "omnibarTextInput"
      - assertNotVisible:
          id: "inputModeWidget"