appId: com.duckduckgo.mobile.android
tags:
    - securityTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                clearState: true
            - runFlow: ../shared/pre_onboarding.yaml
            # Test 1
            - doubleTapOn:
                id: "omnibarTextInput"
            - inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-application-scheme.html"
            - pressKey: Enter
            - tapOn: "Got It"
            - tapOn: "Start"
            # Simplified: Just ensure the address bar remains on the current URL, since these URL types are not supported in Android webview anymore.
            - copyTextFrom:
                id: "omnibarTextInput"
            - assertTrue: ${maestro.copiedText == "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-application-scheme.html"}
