appId: com.duckduckgo.mobile.android
name: "DuckPlayer: Direct > Duck Player > Watch on YouTube > YouTube"
tags:
  - duckplayer
---
- retry:
    maxRetries: 0
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../shared/skip_all_onboarding.yaml

      - tapOn:
          id: "omnibarTextInput"
      - inputText: "duck://player/3ml7yeKBUhc"
      - pressKey: Enter

      - extendedWaitUntil:
          visible:
            text: "duck://player/3ml7yeKBUhc.*"
          timeout: 5000

      - tapOn:
          id: app

      - tapOn:
          text: "Watch on YouTube"

      - runFlow: common/assert_youtube_visible.yaml
      - runFlow: common/assert_overlay_not_shown.yaml
